--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"name":"pushkin-b55da","gcm_sender_id":"1"}
+{"display": "standalone", "short_name": "pushkin", "name":"pushkin-b55da","gcm_sender_id":"537573818405"}
